--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -37,9 +37,11 @@ spring:
       #create: creates the schema, destroying previous data.
       #create-drop: drop the schema when the SessionFactory is closed explicitly, typically when the application is stopped.
       ddl-auto: update
+      open-in-view: true
+      enable_lazy_load_no_trans: true
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    show-sql: true  #日志中显示sql语句
+    show-sql: false  #日志中显示sql语句
 
 
 #  cloud:
