对模糊查询进行条件限制

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,7 +10,7 @@ spring:
 #      password: 123456
 #      driver-class-name: com.mysql.cj.jdbc.Driver
 
-      url: jdbc:sqlserver://127.0.0.1:1433;DatabaseName=test
+      url: jdbc:sqlserver://127.0.0.1:1433;DatabaseName=testdb3
       jdbc-url: ${spring.datasource.db1.url}
       username: sa
       password: 123456
