--- a/pom.xml
+++ b/pom.xml
@@ -143,11 +143,11 @@
 		</dependency>
 		<!-- jpa dependency / -->
 		<!-- mybatis dependency -->
-		<dependency>
-			<groupId>com.baomidou</groupId>
-			<artifactId>mybatis-plus-boot-starter</artifactId>
-			<version>3.4.2</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.baomidou</groupId>-->
+<!--			<artifactId>mybatis-plus-boot-starter</artifactId>-->
+<!--			<version>3.4.2</version>-->
+<!--		</dependency>-->
 		<!-- mybatis dependency / -->
 
 		<dependency>
