change uri , add /app/  in path.

--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,18 @@
 			<version>3.0.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.nocheater</groupId>-->
+<!--			<artifactId>pay-center-api</artifactId>-->
+<!--			<version>0.0.1-SNAPSHOT</version>-->
+<!--			<scope>compile</scope>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
